# xata-py

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .xatarc  Makefile  NOTICE  README.md  README_PYPI.md  core.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py
.github/: license-header.txt
.github/workflows/: lint-test.yml  publish.yml  pull-request.yml  python-app.yml  python-publish.yml  scan-api-changes.yml
codegen/: README.md  api-rename-mapping.json  endpoint.tpl  endpoint.tpl.py  generator.py  namespace.tpl  namespace.tpl.py  requirements.txt
codegen/checksums/: core.txt  workspace.txt
codegen/docs/: core.json  workspace.json
codegen/templates/: data_ask.tpl  data_ask_follow_up.tpl  data_query.tpl  database_create.tpl  database_rename.tpl  endpoint.tpl  namespace.tpl  sql_query.tpl  type_class.tpl  type_param.tpl  types.tpl  workspace_create.tpl
docs/: api.rst  conf.py  index.rst
examples/: README.md  bulk.py  choose_winners.py  load_data.py  notebook.py  pagination.py  stress_query.py  transactions.py
examples/datasets/: README.md  access_logs.csv
examples/rabbitmq/: .env.sample  Makefile  README.md  docker-compose.yml  install.py  requirements.txt
examples/vector-search/: .env.example  README.md  import.py  requirements.txt
tests/integration-tests/: _files_multiple_files_test.py_  _files_single_file_test.py_  _records_file_operations_test.py_  api_request_test.py  api_response_test.py  authentication_test.py  base_test_suite.py  branch_test.py  client_test.py  conftest.py  databases_test.py  files_access.py  files_multiple_files_test.py  files_single_file_test.py  files_test_transormations.py  files_transormations_test.py  files_upload_url_test.py  helpers_bulkprocessor_test.py  helpers_transaction_test.py  namespace_test.py  records_branch_transactions_test.py  records_file_operations_test.py  records_test.py  search_and_filter_ask_table_test.py  table_test.py  (+10 more)
xata/: __init__.py  api_request.py  api_response.py  client.py  client_test.py  errors.py  helpers.py  namespace.py  utils.py
(+70 files in other folders)
