[tool.poetry]
name = "xata"
version = "0.1.2"
description = "Python client for Xata.io"
authors = ["Xata <support@xata.io>"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://xata-py.readthedocs.io"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
python-dotenv = "^0.21.0"
orjson = "^3.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
isort = "^5.10.1"
flake8-bugbear = "^22.10.27"
flake8-annotations = "^2.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
