[tool.poetry]
name = "xata"
version = "1.2.1"
description = "Python SDK for Xata.io"
authors = ["Xata <support@xata.io>"]
license = "Apache-2.0"
readme = "README_PYPI.md"
documentation = "https://xata-py.readthedocs.io"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
python-dotenv = ">=0.21,<2.0"
orjson = "^3.8.1"
deprecation = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
black = "^22.12.0"
flake8 = "^5.0.4"
pre-commit = "^2.21.0"
isort = "^5.12.0"
flake8-bugbear = "^22.10.27"
flake8-annotations = "^2.9.1"
pdoc3 = "^0.10.0"
Faker = "^17.0.0"
sphinx-rtd-theme = "^1.2.0"
mako = "^1.2.4"
pytz = "^2022.7.1"
Pillow = ">=9.5,<11.0"
python-magic = "^0.4.22"
pep8-naming = "^0.13.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
